<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="6"
        android:orientation="vertical"
        android:padding="@dimen/spacing_1.5x"
        android:rowCount="2">

        <View
            android:layout_height="0dp"
            android:layout_width="@dimen/schedule_time_cells_margin"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:text="@string/mon"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:text="@string/tue"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:text="@string/wed"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:text="@string/thu"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <TextView
            android:text="@string/fri"
            android:textAlignment="center"
            android:layout_row="0"
            android:layout_column="5"
            android:gravity="center"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/schedule_hour"
            android:layout_width="@dimen/schedule_time_cells_margin"
            android:textAlignment="center"
            android:text="7:00"
            android:gravity="center"
            android:background="@drawable/cell_border"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"/>
    </GridLayout>
</LinearLayout>