<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="me.dbecaj.friurnik.ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_nickname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_nickname_input_request"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/add_input_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font"
            android:hint="@string/nickname"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/add_nickname_student_id_bottom_margin"/>

        <TextView
            android:id="@+id/add_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_input_request_text"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/add_input_student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font"
            android:hint="@string/student_id"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/add_save_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_inputTopMargin"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/add_save_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/login_nextFontSize" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>